update from long time ago

--- a/resume.tex
+++ b/resume.tex
@@ -46,6 +46,9 @@
 \contact{Xin Chen}
 {9244 Regents Road Apt-I, La Jolla, CA 92037 $\bullet$ (858) 888-3659 $\bullet$ xryanchen@gmail.com}
 
+\header{Objective}
+Seek a full-time position in software development/test engineering area.
+
 \header{Education}
 
 \schoolwithcourses{University of California, San Diego}{La Jolla, CA}{Graduate student in Electrical and Computer Engineering Department, 2011-2013}
